[gd_scene load_steps=18 format=3 uid="uid://bitsdejcooa5k"]

[ext_resource type="Script" path="res://scenes/test_scene_1.gd" id="1_aus7c"]
[ext_resource type="Texture2D" uid="uid://dueu36rpctb75" path="res://assets/sprites/brick.png" id="1_awjfy"]
[ext_resource type="PackedScene" uid="uid://6gmh1bfwk852" path="res://scenes/characters/santa.tscn" id="3_21xm2"]
[ext_resource type="Texture2D" uid="uid://dkv6xexl75832" path="res://assets/sprites/zombChild_1_sprpng.png" id="4_wsg22"]
[ext_resource type="PackedScene" uid="uid://r58ntc82cc3p" path="res://scenes/levels/base_level_test.tscn" id="4_yahny"]
[ext_resource type="PackedScene" uid="uid://bvsa46x4y8tpk" path="res://scenes/powerups/powerup_jump.tscn" id="5_setsb"]
[ext_resource type="Texture2D" uid="uid://dnler3oqt813a" path="res://assets/sprites/left_arrow.png" id="5_w0adq"]
[ext_resource type="PackedScene" uid="uid://cx2ppr13w7sow" path="res://scenes/powerups/powerup_speed.tscn" id="6_ctakw"]
[ext_resource type="PackedScene" uid="uid://cxs4fakvi71tj" path="res://scenes/projectiles/collectable_fragment_missile.tscn" id="6_laukx"]
[ext_resource type="PackedScene" uid="uid://b7dutkbfw5mf0" path="res://scenes/levels/the_end_1.tscn" id="8_wjwca"]
[ext_resource type="Script" path="res://scenes/controllers/testscene_control.gd" id="9_ywni5"]
[ext_resource type="PackedScene" uid="uid://jvku2jd15jl5" path="res://scenes/powerups/powerup_reload.tscn" id="10_wrccg"]
[ext_resource type="PackedScene" uid="uid://drryop3blfyv6" path="res://scenes/powerups/powerup_protect.tscn" id="11_u5380"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33qmm"]
size = Vector2(1154, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61ckx"]
size = Vector2(599.72, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_643j6"]
size = Vector2(0.620629, 608)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljasm"]
size = Vector2(106, 74)

[node name="TestScene1" type="Node2D"]
script = ExtResource("1_aus7c")

[node name="BaseLevelTest" parent="." instance=ExtResource("4_yahny")]
position = Vector2(1, 7)
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245198, 0, 0, 1245191, 0, 0, 1245197, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245944, 0, 0, 1245945, 0, 0, 1245946, 0, 0, 1245947, 0, 0, 1245948, 0, 0, 1245949, 0, 0, 1245950, 0, 0, 1245951, 0, 0, 1245952, 0, 0, 1245953, 0, 0, 1245954, 0, 0, 1245955, 0, 0, 1245956, 0, 0, 1245957, 0, 0, 1245958, 0, 0, 1245959, 0, 0, 1245960, 0, 0, 1245961, 0, 0, 1245962, 0, 0, 1245963, 0, 0, 1245964, 0, 0, 1245965, 0, 0, 1245966, 0, 0, 1245967, 0, 0, 1245968, 0, 0, 1245969, 0, 0, 1245970, 0, 0, 1245971, 0, 0, 983040, 2, 0, 983042, 131074, 0, 983041, 65538, 0, 983043, 2, 0, 983044, 65538, 0, 983045, 131074, 0, 1310719, 0, 0, 1310718, 0, 0, 1310717, 0, 0, 1310716, 0, 0, 1310715, 0, 0, 1310714, 0, 0, 1310713, 0, 0, 1310712, 0, 0, 1310711, 0, 0, 1310710, 0, 0, 1310709, 0, 0, 1310708, 0, 0, 1310707, 0, 0, 1310706, 0, 0, 1310705, 0, 0, 1310704, 0, 0, 1310703, 0, 0, 1310702, 0, 0, 1310701, 0, 0, 1310700, 0, 0, 1310699, 0, 0, 1310698, 0, 0, 1310697, 0, 0, 1310696, 0, 0, 1310695, 0, 0, 1310694, 0, 0, 1310693, 0, 0, 1310692, 0, 0, 1310691, 0, 0, 1310690, 0, 0, 1310689, 0, 0, 1310688, 0, 0, 1310687, 0, 0, 1310686, 0, 0, 1310685, 0, 0, 1310684, 0, 0, 1310683, 0, 0, 1310682, 0, 0, 1310681, 0, 0, 1310680, 0, 0, 1310679, 0, 0, 1310678, 0, 0, 1310677, 0, 0, 1310676, 0, 0, 1310675, 0, 0, 1310674, 0, 0, 1310673, 0, 0, 1310672, 0, 0, 1310671, 0, 0, 1310670, 0, 0, 1310669, 0, 0, 1310668, 0, 0, 1310667, 0, 0, 1310666, 0, 0, 1310665, 0, 0, 1310664, 0, 0, 1310663, 0, 0, 1310662, 0, 0, 1310661, 0, 0, 1310660, 0, 0, 1310659, 0, 0, 1310658, 0, 0, 1310657, 0, 0, 1310656, 0, 0, 1310655, 0, 0, 1310654, 0, 0, 1310653, 0, 0, 1310652, 0, 0, 1310651, 0, 0, 1310650, 0, 0, 1310649, 0, 0, 1310648, 0, 0, 1310647, 0, 0, 1310646, 0, 0, 1310645, 0, 0, 1310644, 0, 0, 1310643, 0, 0, 1310642, 0, 0, 1310641, 0, 0, 1310640, 0, 0, 1310639, 0, 0, 1310638, 0, 0, 1310637, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1114254, 0, 0, 1114255, 0, 0, 1114256, 0, 0, 1114257, 0, 0, 1114258, 0, 0, 1114259, 0, 0, 1114260, 0, 0, 1114261, 0, 0, 1114262, 0, 0, 1114263, 0, 0, 1114264, 0, 0, 1114265, 0, 0, 1114266, 0, 0, 1114267, 0, 0, 1114268, 0, 0, 1114269, 0, 0, 1114270, 0, 0, 1114271, 0, 0, 1114272, 0, 0, 1114273, 0, 0, 1114274, 0, 0, 1114275, 0, 0, 1114276, 0, 0, 1114277, 0, 0, 1114278, 0, 0, 1114279, 0, 0, 1114280, 0, 0, 1114281, 0, 0, 1114282, 0, 0, 1114283, 0, 0, 1114284, 0, 0, 1114285, 0, 0, 1114286, 0, 0, 1114287, 0, 0, 1114288, 0, 0, 1114289, 0, 0, 1114290, 0, 0, 1114291, 0, 0, 1114292, 0, 0, 1114293, 0, 0, 1114294, 0, 0, 1114295, 0, 0, 1114296, 0, 0, 1114297, 0, 0, 1114298, 0, 0, 1114299, 0, 0, 1114300, 0, 0, 1114301, 0, 0, 1114302, 0, 0, 1114303, 0, 0, 1114304, 0, 0, 1114305, 0, 0, 1114306, 0, 0, 1114307, 0, 0, 1114308, 0, 0, 1114309, 0, 0, 1114310, 0, 0, 1114311, 0, 0, 1114312, 0, 0, 1114313, 0, 0, 1114314, 0, 0, 1114315, 0, 0, 1114316, 0, 0, 1114317, 0, 0, 1114318, 0, 0, 1114319, 0, 0, 1114320, 0, 0, 1114321, 0, 0, 1114322, 0, 0, 1114323, 0, 0, 1114324, 0, 0, 655502, 0, 0, 655503, 0, 0, 655504, 0, 0, 655505, 0, 0, 655506, 0, 0, 655507, 0, 0, 655508, 0, 0, 655509, 0, 0, 655510, 0, 0, 655511, 0, 0, 655512, 0, 0, 655513, 0, 0, 589978, 0, 0, 589979, 0, 0, 589980, 0, 0, 589981, 0, 0, 589982, 0, 0, 589983, 0, 0, 589984, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1048626, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 983096, 0, 0, 983097, 0, 0, 983098, 0, 0, 983099, 0, 0, 983100, 0, 0, 983101, 0, 0, 983102, 0, 0, 983103, 0, 0, 983104, 0, 0, 917569, 0, 0, 917570, 0, 0, 917571, 0, 0, 917572, 0, 0, 917573, 0, 0, 983110, 0, 0, 983111, 0, 0, 983112, 0, 0, 983113, 0, 0, 1048650, 0, 0, 1048651, 0, 0, 1048652, 0, 0, 1048653, 0, 0, 1048654, 0, 0, 1048655, 0, 0, 1048656, 0, 0, 1114193, 0, 0, 1114194, 0, 0, 1114195, 0, 0, 1114196, 0, 0, 1114197, 0, 0, 1114198, 0, 0, 1179735, 0, 0, 1179736, 0, 0, 1179737, 0, 0, 1179738, 0, 0, 1179739, 0, 0, 1179740, 0, 0, 1179741, 0, 0, 1245278, 0, 0, 1245279, 0, 0, 1245280, 0, 0, 1245281, 0, 0, 1179745, 0, 0, 1114210, 0, 0, 1048674, 0, 0, 983139, 0, 0, 983140, 0, 0, 1048677, 0, 0, 1048678, 0, 0, 1114215, 0, 0, 1114216, 0, 0, 1179753, 0, 0, 1179754, 0, 0, 1179755, 0, 0, 1179756, 0, 0, 1179757, 0, 0, 1179758, 0, 0, 1114223, 0, 0, 1114224, 0, 0, 1048689, 0, 0, 1048690, 0, 0, 983155, 0, 0, 983156, 0, 0, 1048693, 0, 0, 1048694, 0, 0, 1048695, 0, 0, 1048696, 0, 0, 1048697, 0, 0, 1114234, 0, 0, 1114235, 0, 0, 1114236, 0, 0, 1114237, 0, 0, 1114239, 0, 0, 1114240, 0, 0, 1114241, 0, 0, 1114242, 0, 0, 1114243, 0, 0, 1114244, 0, 0, 1114245, 0, 0, 1114246, 0, 0, 1114247, 0, 0, 1114248, 0, 0, 1114249, 0, 0, 1114250, 0, 0, 1114251, 0, 0, 1114252, 0, 0, 1114253, 0, 0, 1114238, 0, 0, 786535, 0, 0, 786536, 0, 0, 721001, 0, 0, 721002, 0, 0, 655467, 0, 0, 655468, 0, 0, 589933, 0, 0, 589934, 0, 0, 524399, 0, 0, 524400, 0, 0, 655476, 0, 0, 655477, 0, 0, 655478, 0, 0, 655479, 0, 0, 655480, 0, 0, 655481, 0, 0, 655482, 0, 0, 655483, 0, 0, 655484, 0, 0, 655485, 0, 0, 655486, 0, 0, 655489, 0, 0, 655490, 0, 0, 655491, 0, 0, 721028, 0, 0, 721029, 0, 0, 721030, 0, 0, 721031, 0, 0, 721032, 0, 0, 786569, 0, 0, 786570, 0, 0, 786571, 0, 0, 852070, 0, 0, 852147, 0, 0, 852148, 0, 0, 786613, 0, 0, 786614, 0, 0, 786615, 0, 0, 721080, 0, 0, 721081, 0, 0, 721082, 0, 0, 655547, 0, 0, 655548, 0, 0, 655549, 0, 0, 590014, 0, 0, 590015, 0, 0, 917682, 0, 0, 917694, 0, 0, 917695, 0, 0, 852160, 0, 0, 852161, 0, 0, 852162, 0, 0, 786627, 0, 0, 786628, 0, 0, 786629, 0, 0, 786630, 0, 0, 721095, 0, 0, 721096, 0, 0, 721097, 0, 0, 655562, 0, 0, 655563, 0, 0, 524481, 0, 0, 524482, 0, 0, 458947, 0, 0, 458948, 0, 0, 458949, 0, 0, 458950, 0, 0, 393415, 0, 0, 393416, 0, 0, 393423, 0, 0, 458959, 0, 0, 524495, 0, 0, 590031, 0, 0, 655567, 0, 0, 721103, 0, 0, 917713, 0, 0, 852178, 0, 0, 852179, 0, 0, 786644, 0, 0, 721109, 0, 0, 655574, 0, 0, 327901, 0, 0, 393437, 0, 0, 458972, 0, 0, 524508, 0, 0, 1114325, 0, 0, 1114326, 0, 0, 1114327, 0, 0, 1114328, 0, 0, 1114329, 0, 0, 1114330, 0, 0, 1114331, 0, 0, 1179868, 0, 0, 1179869, 0, 0, 1179870, 0, 0, 1179871, 0, 0, 1179872, 0, 0, 1179873, 0, 0, 1179874, 0, 0, 1179875, 0, 0, 1179876, 0, 0, 1179877, 0, 0, 1179878, 0, 0, 1179879, 0, 0, 1179880, 0, 0, 1245417, 0, 0, 1245418, 0, 0, 1245419, 0, 0, 1245420, 0, 0, 1245421, 0, 0, 1245422, 0, 0, 1245423, 0, 0, 327902, 0, 0, 327903, 0, 0, 327904, 0, 0, 327905, 0, 0, 327906, 0, 0, 393443, 0, 0, 393444, 0, 0, 458981, 0, 0, 458982, 0, 0, 1245424, 0, 0, 1245425, 0, 0, 1245426, 0, 0, 1245427, 0, 0, 1245428, 0, 0, 1048842, 0, 0, 1048843, 0, 0, 983308, 0, 0, 983309, 0, 0, 917774, 0, 0, 1048847, 0, 0, 1048848, 0, 0, 1048849, 0, 0, 1048850, 0, 0, 1048851, 0, 0, 1048852, 0, 0, 1048853, 0, 0, 1048854, 0, 0, 1048855, 0, 0, 1048856, 0, 0, 1048857, 0, 0, 1048858, 0, 0, 1048859, 0, 0, 1048860, 0, 0, 983311, 0, 0, 983312, 0, 0, 1179930, 0, 0, 1114395, 0, 0, 1114396, 0, 0, 1048861, 0, 0, 983326, 0, 0, 262405, 0, 0, 262406, 0, 0, 262407, 0, 0, 262408, 0, 0, 262409, 0, 0, 262410, 0, 0, 262411, 0, 0, 262412, 0, 0, 262413, 0, 0, 262414, 0, 0, 262415, 0, 0, 262416, 0, 0, 262417, 0, 0, 262418, 0, 0, 262419, 0, 0, 262420, 0, 0, 262421, 0, 0, 262422, 0, 0, 262424, 0, 0, 262425, 0, 0, 262426, 0, 0, 262427, 0, 0, 262428, 0, 0, 262429, 0, 0, 262430, 0, 0, 262431, 0, 0, 262432, 0, 0, 262433, 0, 0, 262434, 0, 0, 262435, 0, 0, 262436, 0, 0, 262437, 0, 0, 262438, 0, 0, 262442, 0, 0, 262443, 0, 0, 262444, 0, 0, 262445, 0, 0, 262446, 0, 0, 262447, 0, 0, 262448, 0, 0, 262449, 0, 0, 262450, 0, 0, 262451, 0, 0, 262452, 0, 0, 1114398, 0, 0, 1114399, 0, 0, 1114400, 0, 0, 1114401, 0, 0, 1114402, 0, 0, 1114403, 0, 0, 1114404, 0, 0, 1114405, 0, 0, 1179942, 0, 0, 1179943, 0, 0, 1179944, 0, 0, 1179945, 0, 0, 1179946, 0, 0, 1179947, 0, 0, 1179948, 0, 0, 1311019, 0, 0, 1311020, 0, 0, 1245485, 0, 0, 1245486, 0, 0, 1245487, 0, 0, 1245488, 0, 0, 1179953, 0, 0, 1179954, 0, 0, 1179955, 0, 0, 1179956, 0, 0, 1114421, 0, 0, 1114422, 0, 0, 1114423, 0, 0, 1114424, 0, 0, 1048889, 0, 0, 1048890, 0, 0, 1179960, 0, 0, 1179961, 0, 0, 1179962, 0, 0, 1179963, 0, 0, 1179964, 0, 0, 1179965, 0, 0, 1179966, 0, 0, 1179967, 0, 0, 1179968, 0, 0, 1179969, 0, 0, 1179970, 0, 0, 1114435, 0, 0, 1114436, 0, 0, 1114437, 0, 0, 1114438, 0, 0, 1114439, 0, 0, 1114440, 0, 0, 1114441, 0, 0, 1114442, 0, 0, 1114443, 0, 0, 1114444, 0, 0, 917831, 0, 0, 917832, 0, 0, 983369, 0, 0, 983370, 0, 0, 983371, 0, 0, 1048908, 0, 0, 1048909, 0, 0, 1048910, 0, 0, 1114447, 0, 0, 1114448, 0, 0, 1114449, 0, 0, 1179986, 0, 0, 1179987, 0, 0, 1179988, 0, 0, 1245525, 0, 0, 1245526, 0, 0, 1245527, 0, 0, 1048929, 0, 0, 1048930, 0, 0, 983395, 0, 0, 983396, 0, 0, 917851, 0, 0, 917852, 0, 0, 983389, 0, 0, 983390, 0, 0, 983391, 0, 0, 1048928, 0, 0, 1114466, 0, 0, 1114467, 0, 0, 1114468, 0, 0, 1180005, 0, 0, 1180006, 0, 0, 1179990, 0, 0, 1179991, 0, 0, 1179992, 0, 0, 1114457, 0, 0, 1114458, 0, 0, 1114459, 0, 0, 1048922, 0, 0, 983387, 0, 0, 1311076, 0, 0, 1311077, 0, 0, 1311078, 0, 0, 1311079, 0, 0, 1311080, 0, 0, 1311081, 0, 0, 1245546, 0, 0, 1245547, 0, 0, 1245548, 0, 0, 1245549, 0, 0, 1245550, 0, 0, 1245551, 0, 0, 1245552, 0, 0, 1245553, 0, 0, 1245554, 0, 0, 1245555, 0, 0, 1180020, 0, 0, 1180021, 0, 0, 1180022, 0, 0, 1180023, 0, 0, 1180024, 0, 0, 1180025, 0, 0, 1245543, 0, 0, 1048951, 0, 0, 1048952, 0, 0, 1114489, 0, 0, 1114490, 0, 0, 1114491, 0, 0, 1114492, 0, 0, 1180029, 0, 0, 1180030, 0, 0, 1180031, 0, 0, 1245568, 0, 0, 1245569, 0, 0, 1245570, 0, 0, 1245571, 0, 0, 1311108, 0, 0, 1311109, 0, 0, 1048901, 0, 0, 262403, 0, 0, 262402, 0, 0, 262401, 0, 0, 262400, 0, 0, 262399, 0, 0, 983217, 0, 0, 983229, 0, 0, 983248, 0, 0, 524507, 0, 0, 393436, 0, 0, 590039, 0, 0, 590040, 0, 0, 524506, 0, 0, 590042, 0, 0, 655578, 0, 0, 590043, 0, 0, 655579, 0, 0, 721114, 0, 0, 786649, 0, 0, 852185, 0, 0, 852184, 0, 0, 917720, 0, 0, 1245544, 0, 0, 1245545, 0, 0, 1245572, 0, 0, 1245573, 0, 0, 1245574, 0, 0, 1180039, 0, 0, 1180040, 0, 0, 1180041, 0, 0, 1180042, 0, 0, 1180043, 0, 0, 1180044, 0, 0, 1114509, 0, 0, 1114510, 0, 0, 1114511, 0, 0, 1114512, 0, 0, 1114513, 0, 0, 1114514, 0, 0, 1048979, 0, 0, 1048980, 0, 0, 1048981, 0, 0, 1048718, 0, 0, 1048719, 0, 0, 1048720, 0, 0, 1048721, 0, 0, 983186, 0, 0, 983187, 0, 0, 983188, 0, 0, 983189, 0, 0, 983190, 0, 0, 983191, 0, 0, 983192, 0, 0, 1048729, 0, 0, 1048730, 0, 0, 1048731, 0, 0, 1048732, 0, 0, 1048704, 0, 0, 1048705, 0, 0, 1048741, 0, 0, 983206, 0, 0, 983207, 0, 0, 917672, 0, 0, 1179890, 0, 0, 1114355, 0, 0, 1048820, 0, 0, 1048821, 0, 0, 983286, 0, 0, 917751, 0, 0, 852216, 0, 0, 786681, 0, 0, 721146, 0, 0, 721147, 0, 0, 655612, 0, 0, 590077, 0, 0, 590078, 0, 0, 655615, 0, 0, 655616, 0, 0, 721153, 0, 0, 786690, 0, 0, 786691, 0, 0, 852228, 0, 0, 917765, 0, 0, 917766, 0, 0, 983303, 0, 0, 1048840, 0, 0, 1048841, 0, 0, 196877, 0, 0, 196878, 0, 0, 196879, 0, 0, 131344, 0, 0, 131345, 0, 0, 131346, 0, 0, 131347, 0, 0, 196884, 0, 0, 196893, 0, 0, 196894, 0, 0, 131359, 0, 0, 131360, 0, 0, 65825, 0, 0, 131362, 0, 0, 196899, 0, 0, 1114407, 0, 0, 1114408, 0, 0, 1048873, 0, 0, 1048874, 0, 0, 1048875, 0, 0, 983340, 0, 0, 983341, 0, 0, 983342, 0, 0, 983343, 0, 0, 1048880, 0, 0, 1048881, 0, 0, 1114418, 0, 0, 1114419, 0, 0, 1180014, 0, 0, 1180015, 0, 0, 1180016, 0, 0, 1114481, 0, 0, 1114482, 0, 0, 1114483, 0, 0, 1048948, 0, 0, 1048949, 0, 0, 1180053, 0, 0, 1180054, 0, 0, 1114519, 0, 0, 1114520, 0, 0, 1048985, 0, 0, 1048986, 0, 0, 983451, 0, 0, 983452, 0, 0, 917917, 0, 0, 917918, 0, 0, 1114518, 0, 0, 983453, 0, 0, 983454, 0, 0, 983455, 0, 0, 983456, 0, 0, 983457, 0, 0, 917922, 0, 0, 917923, 0, 0, 917924, 0, 0, 917925, 0, 0, 917926, 0, 0, 917927, 0, 0, 917928, 0, 0, 917929, 0, 0, 917930, 0, 0, 917931, 0, 0, 917932, 0, 0, 917933, 0, 0, 852398, 0, 0, 852399, 0, 0, 852400, 0, 0, 852401, 0, 0, 852402, 0, 0, 852403, 0, 0, 852404, 0, 0, 655770, 0, 0, 590235, 0, 0, 590236, 0, 0, 590237, 0, 0, 590238, 0, 0, 590239, 0, 0, 590240, 0, 0, 524705, 0, 0, 524706, 0, 0, 524707, 0, 0, 917909, 0, 0, 852374, 0, 0, 786839, 0, 0, 721305, 0, 0, 459164, 0, 0, 393627, 0, 0, 393626, 0, 0, 393625, 0, 0, 393624, 0, 0, 393623, 0, 0, 393622, 0, 0, 393621, 0, 0, 328084, 0, 0, 328083, 0, 0, 328082, 0, 0, 328081, 0, 0, 328080, 0, 0, 328079, 0, 0, 393614, 0, 0, 393613, 0, 0, 393612, 0, 0, 459147, 0, 0, 459146, 0, 0, 459145, 0, 0, 459144, 0, 0, 524679, 0, 0, 524678, 0, 0, 524677, 0, 0, 590205, 0, 0, 590206, 0, 0, 655743, 0, 0, 655744, 0, 0, 655745, 0, 0, 721282, 0, 0, 721283, 0, 0, 721284, 0, 0, 786821, 0, 0, 786822, 0, 0, 786823, 0, 0, 852360, 0, 0, 852361, 0, 0, 393552, 0, 0, 459089, 0, 0, 524625, 0, 0, 590162, 0, 0, 655698, 0, 0, 721235, 0, 0, 786771, 0, 0, 852308, 0, 0, 786773, 0, 0, 721238, 0, 0, 655703, 0, 0, 590168, 0, 0, 590169, 0, 0, 524634, 0, 0, 459099, 0, 0, 393564, 0, 0, 459100, 0, 0, 459101, 0, 0, 459102, 0, 0, 459103, 0, 0, 459104, 0, 0, 524641, 0, 0, 524642, 0, 0, 524643, 0, 0, 524644, 0, 0, 524645, 0, 0, 524646, 0, 0, 524647, 0, 0, 524648, 0, 0, 524649, 0, 0, 590186, 0, 0, 590187, 0, 0, 590188, 0, 0, 590189, 0, 0, 590190, 0, 0, -65211, 0, 0, 326, 0, 0, 327, 0, 0, 65864, 0, 0, 131401, 0, 0, 131402, 0, 0, 196939, 0, 0, 262476, 0, 0, 328013, 0, 0, 328014, 0, 0, 393551, 0, 0, 524636, 0, 0, 524637, 0, 0, 590174, 0, 0, 590175, 0, 0, 590176, 0, 0, 590177, 0, 0, 655714, 0, 0, 655715, 0, 0, 655716, 0, 0, 655717, 0, 0, 721254, 0, 0, 721255, 0, 0, 721256, 0, 0, 786793, 0, 0, 786794, 0, 0, 786795, 0, 0, 786796, 0, 0, 852333, 0, 0, 852334, 0, 0, 786797, 0, 0, 721262, 0, 0, 655726, 0, 0, 590191, 0, 0, 655728, 0, 0, 721265, 0, 0, 786802, 0, 0, 786801, 0, 0, 786800, 0, 0, 786799, 0, 0, 852405, 0, 0, 852406, 0, 0, 852407, 0, 0, 852408, 0, 0, 852409, 0, 0, 852410, 0, 0, 852411, 0, 0, 852412, 0, 0, 852413, 0, 0, 852414, 0, 0, 917951, 0, 0, 983488, 0, 0, 983489, 0, 0, 1049026, 0, 0, 1049027, 0, 0, 1114564, 0, 0, 1180101, 0, 0, 1180102, 0, 0, 1245639, 0, 0, 1114567, 0, 0, 1114568, 0, 0, 1049033, 0, 0, 1049034, 0, 0, 983499, 0, 0, 983500, 0, 0, 917965, 0, 0, 852430, 0, 0, 852431, 0, 0, 786896, 0, 0, 786897, 0, 0, 721362, 0, 0, 655826, 0, 0, 655827, 0, 0, 655828, 0, 0, 655829, 0, 0, 655830, 0, 0, 590295, 0, 0, 590296, 0, 0, 590297, 0, 0, 590298, 0, 0, 590299, 0, 0, 655837, 0, 0, 721374, 0, 0, 721375, 0, 0, 786912, 0, 0, 786913, 0, 0, 852450, 0, 0, 852451, 0, 0, 917988, 0, 0, 983525, 0, 0, 983526, 0, 0, 1049063, 0, 0, 1049064, 0, 0, 1114601, 0, 0, 1114602, 0, 0, 1180139, 0, 0, 655836, 0, 0, 1114604, 0, 0, 1114605, 0, 0, 1114606, 0, 0, 1049071, 0, 0, 1049072, 0, 0, 1049073, 0, 0, 1049074, 0, 0, 983539, 0, 0, 983540, 0, 0, 983541, 0, 0, 983542, 0, 0, 918007, 0, 0, 918008, 0, 0, 918009, 0, 0, 918010, 0, 0, 852475, 0, 0, 852476, 0, 0, 852477, 0, 0, 852478, 0, 0, 786943, 0, 0, 786944, 0, 0, 786945, 0, 0, 786946, 0, 0, 721411, 0, 0, 721412, 0, 0, 721413, 0, 0, 721414, 0, 0, 655879, 0, 0, 655880, 0, 0, 655881, 0, 0, 327934, 0, 0, 262398, 0, 0, 262397, 0, 0, 852211, 0, 0, 786676, 0, 0, 721141, 0, 0, 655605, 0, 0, 590070, 0, 0, 524535, 0, 0, 459000, 0, 0, 393465, 0, 0, 327930, 0, 0, 327931, 0, 0, 262396, 0, 0)

[node name="Santa" parent="." instance=ExtResource("3_21xm2")]
texture_filter = 1
position = Vector2(200, 592)
collision_mask = 149

[node name="Control" type="Control" parent="Santa"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Santa/Control"]
layout_mode = 0
offset_left = -192.0
offset_top = -104.0
offset_right = -152.0
offset_bottom = -81.0

[node name="Sprite2D" type="Sprite2D" parent="Santa/Control"]
position = Vector2(-129, -92.25)
scale = Vector2(0.75, 0.742424)
texture = ExtResource("4_wsg22")
flip_h = true
region_enabled = true
region_rect = Rect2(0, 0, 32.6734, 33.0529)

[node name="Sprite2D2" type="Sprite2D" parent="Santa/Control"]
position = Vector2(-146, -92)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_w0adq")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(575, 631)
scale = Vector2(35.75, 1)

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
visible = false
texture_filter = 1
texture = ExtResource("1_awjfy")

[node name="GroundBox" type="CollisionShape2D" parent="Ground"]
visible = false
position = Vector2(560.867, 6)
shape = SubResource("RectangleShape2D_33qmm")

[node name="Ground_Area" type="Area2D" parent="Ground"]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Ground_Area"]
visible = false
position = Vector2(262.294, -8)
shape = SubResource("RectangleShape2D_61ckx")

[node name="left wall" type="StaticBody2D" parent="Ground"]
position = Vector2(-16.5, -313)
collision_layer = 128
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/left wall"]
position = Vector2(0.0550698, 58)
shape = SubResource("RectangleShape2D_643j6")

[node name="Projectiles" type="Node2D" parent="."]

[node name="powerup_jump" parent="." instance=ExtResource("5_setsb")]
position = Vector2(7368, 208)

[node name="powerup_speed" parent="." instance=ExtResource("6_ctakw")]
position = Vector2(9056, 88)

[node name="ZOMBIES" type="Node2D" parent="."]
texture_filter = 1

[node name="Zombie_timer" type="Timer" parent="ZOMBIES"]

[node name="new_zombies" type="Node2D" parent="ZOMBIES"]

[node name="collectable_fragment_missile" parent="." instance=ExtResource("6_laukx")]
position = Vector2(568, 456)
metadata/_edit_group_ = true

[node name="the_end_1" parent="." instance=ExtResource("8_wjwca")]
position = Vector2(20824, 560)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_ywni5")

[node name="powerup_reload" parent="." instance=ExtResource("10_wrccg")]
position = Vector2(13400, 216)

[node name="powerup_protect" parent="." instance=ExtResource("11_u5380")]
position = Vector2(4776, 288)

[node name="powerup_speed2" parent="." instance=ExtResource("6_ctakw")]
position = Vector2(13088, 144)

[node name="powerup_protect2" parent="." instance=ExtResource("11_u5380")]
position = Vector2(328, 592)

[node name="idk_what_this_is_anymore" type="Area2D" parent="."]
position = Vector2(12936, 592)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="idk_what_this_is_anymore"]
position = Vector2(35, -93)
shape = SubResource("RectangleShape2D_ljasm")

[node name="child_node" type="Node2D" parent="."]

[connection signal="die" from="Santa" to="." method="_on_santa_die"]
[connection signal="missile" from="Santa" to="." method="_on_santa_missile"]
[connection signal="throw" from="Santa" to="." method="_on_santa_throw"]
[connection signal="powerup_jump_sig" from="powerup_jump" to="Santa" method="_on_powerup_jump_powerup_jump_sig"]
[connection signal="powerup_speed_sig" from="powerup_speed" to="Santa" method="_on_powerup_speed_powerup_speed_sig"]
[connection signal="timeout" from="ZOMBIES/Zombie_timer" to="." method="_on_zombie_timer_timeout"]
[connection signal="missile_fragment_collected" from="collectable_fragment_missile" to="Santa" method="_on_collectable_fragment_missile_missile_fragment_collected"]
[connection signal="level_done" from="the_end_1" to="." method="_on_the_end_1_level_done"]
[connection signal="powerup_reload_sig" from="powerup_reload" to="Santa" method="_on_powerup_reload_powerup_reload_sig"]
[connection signal="powerup_protect_sig" from="powerup_protect" to="Santa" method="_on_powerup_protect_powerup_protect_sig"]
[connection signal="powerup_protect_sig" from="powerup_protect2" to="Santa" method="_on_powerup_protect_powerup_protect_sig"]
[connection signal="body_entered" from="idk_what_this_is_anymore" to="." method="_on_idk_what_this_is_anymore_body_entered"]
